# synfig

autobuild/: synfigstudio-linux-build.sh
synfig-core/: configure.ac
synfig-core/po/: ar.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_GB.po  es.po  eu.po  eu_ES.po  fa_IR.po  fr.po  he.po  hu.po  it.po  ja_JP.po  lt.po  nl.po  no_NO.po  pl_PL.po  pt_BR.po  ro.po  ru.po  si.po  sk_SK.po  sv_SE.po  tr.po  zh_CN.po
synfig-core/src/modules/lyr_std/: rotate.cpp  translate.cpp
synfig-core/src/modules/mod_geometry/: rectangle.cpp  rectangle.h  star.cpp
synfig-core/src/synfig/: layer.h  layer_shape.cpp  matrix.h  transformationchain.h  vector.h
synfig-core/src/synfig/color/: cairocolor.cpp  cairocolor.h  color.cpp  color.h
synfig-core/src/tool/: joblistprocessor.cpp  main.cpp
synfig-core/test/: Makefile.am
synfig-core/test/gtest/: Makefile_insert  color.cpp  main.cpp
